# eichi

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  eichi.toml.example  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: sources.example.toml
minisite/: .env.example  Dockerfile  README.md  app.py  eichi_worker.py
minisite/static/: local-time.js  search.js  style.css
minisite/templates/: index.html
minisite/tests/: test_app.py
src/eichi/: __init__.py  chunk.py  cli.py  config.py  embed.py  sources.py  store.py
src/eichi/connectors/: __init__.py  claude_jsonl.py  claude_watch_queue.py
tests/: test_chunk.py  test_cli_caller.py  test_cli_retrieval.py  test_cli_similarity.py  test_cli_stream.py  test_cli_timestamps.py  test_cluster_dedupe.py  test_embed_offline.py  test_hybrid.py  test_sources.py  test_store.py
tests/connectors/: test_claude_jsonl.py  test_claude_watch_queue.py
